--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,64 +1,70 @@
+*{
+    margin:0;
+    padding: 0;
+}
 
 body,html{
     height:100%;
     width: 100%;
 }
 
+        
+  
+  
+marquee{
+    height:36%;
+    top:5%;
+    position: absolute;
+    color: white;
+    }
 
-body{
-background: url("") no-repeat;
-background-size: cover;
-height:100%;
+marquee h1{
+    font-size:75px;
+    text-align: center;
+    
     
 }
+  
 
-#mainheading{
+    .mainheading{
      text-align:center;
-     position: absolute;
+     position:absolute;
      left:50%;
-     z-index:5;
-   
+     color: red;
+    
 }
 
-
-
     
-      #sidebar ul li:hover{
-          background:silver;
-      }
+
+
+ 
       
-      #button{
+ #button{
           top:2%;
           left:3%;
           position: absolute;
           z-index:2;
-          
-      }
+ }
       
     
+
     
-    
-   .mainheading{
-       left:10%;
-       position:absolute;
-       
+ 
      
-   }
+
     
     
 #home{
     position: absolute;
-    top:2%;
-    left: 3%;
-}
+    top:-115%;
+   }
     
     
     #icon{
         position: absolute;
         left: 50%;
-        top:30%;
+        top:20%;
         
-           
     -webkit-transition: -webkit-transform .8s ease-in-out;
     -ms-transition: -ms-transform .8s ease-in-out;
     transition: transform .8s ease-in-out;
@@ -68,13 +74,13 @@ height:100%;
        transform:rotate(360deg);
     -ms-transform:rotate(360deg);
     -webkit-transform:rotate(360deg);
-    
+
    }
    
  #interests{
      position: absolute;
      left:50%;
-     top:50%;
+     top:40%;
      
  }
  
@@ -87,7 +93,7 @@ height:100%;
  #travel{
      position: absolute;
      left:50%;
-     top:70%;
+     top:60%;
  }
  #travel:hover{
      animation : fly 2.5s infinite ease-in;
@@ -101,6 +107,36 @@ height:100%;
   a{text-decoration: none;
      color:black;
  }
- 
- 
- 
+
+#GitHub{
+    position: absolute;
+    left:40%;
+    top:80%;
+}
+
+.profile-description{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.1; 
+    color: #3d4451;
+}
+
+.personal-details{
+    position:absolute;
+    width:100%;
+    top:70%;
+}  
+
+
+.profile-title span{
+      font-weight: 300;
+  }
+     
+.profile{
+    width:50%;
+    height:50%;
+    position: absolute;
+   
+    
+}
+
