--- a/cv_1.css
+++ b/cv_1.css
@@ -4,9 +4,14 @@
 }
 
 body,html{
-    height:100%;
-    width: 100%;
+    
+    
+    top:0%;
+    
+    background-color:black;
+   
 }
+
 
 
 .body{
@@ -14,14 +19,16 @@ body,html{
     height:50%;
     width:60%;
     margin:15% 20%;
-    background-color: red;
+    background:white;
+    
+    
 }
 
 .profilepic{
     position: absolute;
     height:100%;
     width:40%;
-    background-color: blue;
+   
 }
 
 .resume{
@@ -29,5 +36,38 @@ body,html{
     height:100%;
     width:60%;
    left:40%;
-    background-color:pink;
+    
+}
+
+.resume span{
+    font-weight:700;
+}
+
+.resume{
+    font-size:32px;
+    font-weight:300;
+}
+
+.course h1{
+    font-size:20px;
+    font-weight:100;
+}
+
+.description{
+    position:absolute;
+  
+    top:50%;
+    height:50%;
+    width:100%;
+     font-size:20px;
+    font-weight:200;
+   
+} 
+
+.footer{
+    position:absolute;
+    top:90%;
+    width:100%;
+    height:10%;
+    background:red;
 }
