--- a/cv_1.css
+++ b/cv_1.css
@@ -6,9 +6,9 @@
 body,html{
     
     
-    top:0%;
+
+    background-color:grey;
     
-    background-color:black;
    
 }
 
@@ -28,6 +28,7 @@ body,html{
     position: absolute;
     height:100%;
     width:40%;
+    top:20%;
    
 }
 
@@ -36,19 +37,17 @@ body,html{
     height:100%;
     width:60%;
    left:40%;
-    
+    font-size:32px;
+    font-weight:300;
+
 }
 
 .resume span{
     font-weight:700;
 }
 
-.resume{
-    font-size:32px;
-    font-weight:300;
-}
-
 .course h1{
+
     font-size:20px;
     font-weight:100;
 }
@@ -66,8 +65,34 @@ body,html{
 
 .footer{
     position:absolute;
-    top:90%;
+    top:99%;
     width:100%;
     height:10%;
     background:red;
 }
+
+.top-half{
+    top:0%;
+    width:100%;
+    height:50%;
+    position: absolute;
+    background-color: #0EB57D;
+}
+
+.home{
+    position: absolute;
+    z-index:5;
+}
+
+ .btn{
+       position: absolute;
+       left:95%;
+       top:25%;
+       
+   }
+   
+   .back{
+       position: absolute;
+       top:;
+   }
+  
