--- a/cv_1.css
+++ b/cv_1.css
@@ -6,9 +6,10 @@
 body,html{
     
     
-
+width:100%;
+height:100%;
     background-color:grey;
-    
+    overflow: hidden;
    
 }
 
@@ -65,7 +66,7 @@ body,html{
 
 .footer{
     position:absolute;
-    top:99%;
+    top:90%;
     width:100%;
     height:10%;
     background:red;
@@ -78,6 +79,14 @@ body,html{
     position: absolute;
     background-color: #0EB57D;
 }
+
+.nav{
+    position: absolute;
+    height: 30%;
+    width:100%;
+    background-color: pink;
+}
+
 
 .home{
     position: absolute;
@@ -93,6 +102,5 @@ body,html{
    
    .back{
        position: absolute;
-       top:;
    }
   
