--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -26,10 +26,9 @@ marquee h1{
 }
   
 
-    .mainheading{
-     text-align:center;
-     position:absolute;
+    #mainheading{
      left:50%;
+     position:absolute;
      color: red;
     
 }
@@ -54,11 +53,7 @@ marquee h1{
 
     
     
-#home{
-    position: absolute;
-    top:-115%;
-   }
-    
+
     
     #icon{
         position: absolute;
@@ -139,4 +134,3 @@ marquee h1{
    
     
 }
-
