--- a/interests/int_pages.css
+++ b/interests/int_pages.css
@@ -1,9 +1,20 @@
 #section1{
-            background-color:rgb(238,0,90);
+            background-color:rgb(0, 153, 51);
+            color:black;
+}
+
+.passage-img{
+    position: absolute;
+    left:40%;
+    height: 25%;
+    width:20%;
+    padding:0;
+    border-radius: 50%
+   
 }
 
 #section2{
-            background-color:rgb(44,62,80);
+            background-color:rgb(255, 102, 102);
 }
 
 #section3{
@@ -13,4 +24,11 @@
 .section{
             text-align:center;
             color:white;
+}
+
+
+.pagepiling{
+    position: absolute;
+    width:100%;
+    height:100%;
 }
