--- a/cv_2.css
+++ b/cv_2.css
@@ -3,105 +3,69 @@
     padding: 0;
 }
  
- .main{
-     position: absolute;
-     height:100%;
-     width:100%;
-     top:0%;
-     background-color:;
- }
+.main{
+    position:absolute;
+    width:100%;
+    height:90%;
+    
+}
 
-.rochestown{
-    position: absolute;
-    width:50%;
-    height:50%;
-    background-color: black;
-    left:25%;
+.btn{
+    position:absolute;
+    top:95%;
+    left:95%;
+    z-index: 2
+}
+
+.back{
+    position:absolute;
+    top:91%;
+    z-index:2;
+    
+}
+
+.img-section{
+    position:absolute;
+    width:100%;
+    height:25%;
+    background-color:pink;
 }
 
 .roco-img{
-    position: absolute;
-    top:23%;
-    left:40%;
-    border-radius: 50%
-        }
-        
-.image-section{
-    position: absolute;
-    width:100%;
-    height:50%;
-    background-color: pink;
-    z-index: 1
+    position:relative;
+    border-radius:50%;
+    left:45%;
+    top:10%;
 }
 
 .roco-bio{
-    position: absolute;
-    top:60%;
-    color: white;
-    z-index: 6
+    position:absolute;
+    background-color:grey;
+    top:25%;
+    height:25%;
 }
 
-.mainheading{
-    position: absolute;
-    left:25%;
-    color:white;
+.ucc-container{
+    position:absolute;
     top:50%;
-    font-size:20px;
-    z-index: 2;
-}
-
-.body{
-    position: absolute;
-    background-color: green;
+    height:25%;
     width:100%;
-    height:100%;
-}
-
-.ucc{
-     position: absolute;
-    width:50%;
-    height:50%;
-    background-color: black;
-    left:25%;
-    top:50%;
-}
-
-.ucc-img{
-    position: absolute;
-    padding:0%;
-    border-radius: 50%;
-    top:10%;
-    left: 40%;
+    background-color:navy;
     
 }
 
 .ucc-bio{
-    position: absolute;
+    position:absolute;
+    top:75%;
+    height:25%;
     width:100%;
-    height:40%;
-    top:60%;
-    background-color: blue
+    background-color:green;
+    
 }
 
-.ucc-head{
-    color:white;
+.ucc-img{
+    position:relative;
+    border-radius:50%;
+    left:45%;
+    top:10%;
 }
-
-p{
-    color:white;
-}
-
-.heading{
-    color: red;
-    text-align: center;
-}
-
-.btn{
-       position: absolute;
-       top:95%;
-       left:95%;
-   }
-   .back{
-       position: absolute;
-       top:90%;
-   }
