--- a/cv_2.css
+++ b/cv_2.css
@@ -69,3 +69,26 @@
     left:45%;
     top:10%;
 }
+
+.navbar{
+    position: fixed;
+    background-color: black;
+    
+    
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover{
+    text-decoration: none;
+    display: inline-block;
+    overflow: hidden;
+    }
+
