--- a/cv_3.css
+++ b/cv_3.css
@@ -1,6 +1,6 @@
 .main{
     position: absolute;
-    height:100%;
+    height:80%;
     width:100%;
     }
     
@@ -46,6 +46,7 @@
         width:100%;
         top:50%;
         text-align: center;
+    
     }
     
    h1{
@@ -55,7 +56,7 @@
    }
    
    p{
-       font-size:15px;
+       font-size:13px;
    }
    
    .header{
@@ -64,6 +65,7 @@
        width:100%;
        z-index: 2
    }
+   
    
     .mainheading{
         top:0%;
@@ -76,7 +78,7 @@
    
    .footer{
        position: absolute;
-       top:95%;
+       top:85%;
        height:5%;
        width:100%;
        background-color: white;
@@ -87,3 +89,27 @@
        position: absolute;
        left:95%;
    }
+   
+   .navbar{
+    position: fixed;
+    background-color: black;
+   
+    
+    
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover{
+    text-decoration: none;
+    display: inline-block;
+    overflow: hidden;
+    }
+
