--- a/interests/int_pages.css
+++ b/interests/int_pages.css
@@ -1,6 +1,7 @@
 #section1{
             background-color:rgb(0, 153, 51);
             color:black;
+            
 }
 
 .passage-img{
@@ -9,7 +10,8 @@
     height: 25%;
     width:20%;
     padding:0;
-    border-radius: 50%
+    border-radius: 50%;
+    top:10%;
    
 }
 
@@ -31,4 +33,32 @@
     position: absolute;
     width:100%;
     height:100%;
+ 
 }
+
+
+.navbar{
+    position: fixed;
+    background-color: black;
+    z-index: 8;
+    width:100%;
+    height:8%;
+    
+    
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover{
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
+    overflow: hidden;
+    }
