--- a/interests/cloud.css
+++ b/interests/cloud.css
@@ -9,23 +9,54 @@
 
 
 #section2{
-            background-color:white;
-           background-image: url("http://www.vmastoryboard.com/wp-content/uploads/2014/08/Amazon-A-Logo.jpg");
-           background-size: 100px;
-    
+           background-color:white;
+           background-image: url("https://www.intego.com/mac-security-blog/wp-content/uploads/2016/07/cloud-storage-comparison.png");
+        }
+
+h2{
+    position: absolute;
+    font-size: 50px;
+    left:45%;
+    top:10%;
+    color: black;
 }
+
+.backup{
+    position: absolute;
+    top:0%;
+    left:22.5%;
+}
+
+
+.storage{
+    position: absolute;
+    left:25%;
+     
+}
+
 
 
 #section3{
             background-color:rgb(51,153,204);
-            background-image: url("https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Gmail_logo.max-2800x2800.png");
-            background-size:100px;
-    
+            background-image: url("https://images.unsplash.com/photo-1494138030114-a8cf519b022b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a43b8e7b6ad028603a1919502b19d105&auto=format&fit=crop&w=1189&q=80");
+            background-size: cover;
+            
+            
 }
             
+            
+      h3{
+            position: absolute;
+            font-size: 50px;
+            left:35%;
+            top:0%;
+            color: black;
+            z-index: 5
+      }      
+            
+            
 #section4{
-    background-image: url("https://www.princeton.edu/sites/default/files/styles/half_2x/public/images/2018/01/clouds-19.jpg?itok=Qfa5j6NW")
-}
+ }
             
 .section{
             text-align:center;
@@ -42,76 +73,19 @@
 
 
 p{
-    font-size: 18px;
+    position: absolute;
+    font-size: 30px;
+    left:0%;
+    top:30%;
+    color: black;
+    
 
 }
 
 h1{
-    font-size: 75px;
-}
-
-.aws{
     position: absolute;
-    z-index: 9;
-    left:20%;
-    top:0;
-   
-}
-
-
-.aws-bio{
-    position: absolute;
-    background-color: white;
-    height:50%;
-    width:61.5%;
-    left:20%;
-    top:50%;
-    color:black;
-}
-
-.gmail{
-    position: absolute;
-    z-index: 9;
-    left:20%;
-    top:0%;
-}
-
-.gmail-bio{
-     position: absolute;
-    background-color: white;
-    height:50%;
-    width:61.5%;
-    left:20%;
-    top:50%;
-    color:black;
-}
-
-.c9{
-    position: absolute;
-    left:30%;
+    font-size: 50px;
+    left:25%;
     top:0;
 }
 
-.c9-bio{
-    position: absolute;
-    height:50%;
-    width:61.5%;
-    left:20%;
-    top:50%;
-    color:black;
-}
-
-.salesforce{
-     position: absolute;
-    left:37%;
-    top:0;
-}
-
-.salesforce-bio{
-    position: absolute;
-    height:50%;
-    width:61.5%;
-    left:20%;
-    top:50%;
-    color:black;
-}
