--- a/cv_2.css
+++ b/cv_2.css
@@ -6,51 +6,55 @@
 .main{
     position:absolute;
     width:100%;
-    height:90%;
+    height:91%;
+    background-image: url("https://hdwallsource.com/img/2017/12/white-suit-widescreen-wallpaper-60189-61985-hd-wallpapers.jpg");
+    background-size: cover;
     
 }
 
+
 .btn{
     position:absolute;
-    top:95%;
+    top:90%;
     left:95%;
-    z-index: 2
+    z-index:2;
 }
 
 .back{
     position:absolute;
-    top:91%;
+    top:88%;
     z-index:2;
     
 }
 
 .img-section{
     position:absolute;
-    width:100%;
+    width:50%;
     height:25%;
-    background-color:pink;
+    left:25%;
 }
 
 .roco-img{
     position:relative;
     border-radius:50%;
-    left:45%;
+    left:40%;
     top:10%;
 }
 
 .roco-bio{
     position:absolute;
-    background-color:grey;
     top:25%;
     height:25%;
+    width:50%;
+    left:25%;
 }
 
 .ucc-container{
     position:absolute;
     top:50%;
     height:25%;
-    width:100%;
-    background-color:navy;
+    width:50%;
+    left:25%;
     
 }
 
@@ -58,16 +62,16 @@
     position:absolute;
     top:75%;
     height:25%;
-    width:100%;
-    background-color:green;
-    
+    width:50%;
+    left:25%;
 }
 
 .ucc-img{
     position:relative;
     border-radius:50%;
-    left:45%;
+    left:40%;
     top:10%;
+    
 }
 
 .navbar{
