--- a/ebusiness/info.css
+++ b/ebusiness/info.css
@@ -1,12 +1,8 @@
-h1{
-    position: absolute;
+
+*{
+    margin:0;
 }
 
-p{
-    position: absolute;
-    top:10%;
-    font-size: 15px;
-}
 
 iframe{
     position: absolute;
@@ -18,6 +14,7 @@ iframe{
     background-color:black;
     width:100%;
     height:10%;
+    top:0;
     z-index: 10
 }
 
@@ -41,7 +38,7 @@ iframe{
 
 .right{
     position: absolute;
-    height:89%;
+    height:50%;
     width:50%;
     left:50%;
     top:11%;
@@ -50,42 +47,60 @@ iframe{
 .gmail{
     position: absolute;
     height:50%;
-    width:50%;
-    top:50%;
-    background-image: url("https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Gmail_logo.max-2800x2800.png");
-    background-size:70px;
-   
-    
+    width:100%;
+    top:60%;
+    background-image: url("http://1.bp.blogspot.com/-6As1aRUce3s/VnEL2Scp8kI/AAAAAAAABOM/9N7h69B9xxA/s1600/Google-Red-HD-Wallpaper.jpg");
+    background-size:cover;
+    background-position: center;
+     font-family: 'Open Sans', sans-serif;
 }
 
-.gmail-img{
-    position: relative;
-    top:2%;
-    left:20%;
+h1{
+    position: absolute;
+    left:45%;
+    top:-2%;
+}
+
+.cloud{
+    position: absolute;
+    top:15%;
+    font-family: 'Open Sans', sans-serif;
+   
+}
+
+p{
+    font-family: 'Open Sans', sans-serif; 
+}
+
+.top{
+    position: absolute;
+    width:100%;
+    height:60%;
+    top:5%;
+
 }
 
 .c9{
     position: absolute;
-    background:orange;
     height:50%;
-    width:50%;
-    top:50%;
-    left:50%;
-}
-
-.aws{
-    position: absolute;
-    background:grey;
-    height:50%;
-    width:50%;
-    top:100%;
+    width:100%;
+    top:110%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .salesforce{
-   position: absolute;
-    background:blue;
+     position: absolute;
     height:50%;
-    width:50%;
-    top:100%;
-    left:50%; 
+    width:100%;
+    top:160%;
+    font-family: 'Open Sans', sans-serif;
+   
+}
+
+.aws{
+     position: absolute;
+    height:50%;
+    width:100%;
+    top:210%;
+    font-family: 'Open Sans', sans-serif;
 }
