--- a/cv_2.css
+++ b/cv_2.css
@@ -6,7 +6,7 @@
 .main{
     position:absolute;
     width:100%;
-    height:91%;
+    height:100%;
     background-image: url("https://hdwallsource.com/img/2017/12/white-suit-widescreen-wallpaper-60189-61985-hd-wallpapers.jpg");
     background-size: cover;
     
@@ -15,14 +15,14 @@
 
 .btn{
     position:absolute;
-    top:90%;
+    top:95%;
     left:95%;
     z-index:2;
 }
 
 .back{
     position:absolute;
-    top:88%;
+    top:90%;
     z-index:2;
     
 }
@@ -74,25 +74,24 @@
     
 }
 
-.navbar{
-    position: fixed;
-    background-color: black;
-    
-    
+ul{
+    position: absolute;
+    font-size: 30px;
+    z-index: 5;
 }
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+ul li{
+    display: inline;
+    color: black;
+    padding:14px 17px;
+    font-family: 'Leckerli One', cursive;
 }
 
-.navbar a:hover{
+ul li a{
+    color:black;
+}
+
+
+ul li a:hover{
     text-decoration: none;
-    display: inline-block;
-    overflow: hidden;
-    }
-
+}
