--- a/ebusiness/info.css
+++ b/ebusiness/info.css
@@ -6,42 +6,18 @@
 
 iframe{
     position: absolute;
-    top:11%;
+    top:15%;
+    left:5%;
 }
 
-.navbar{
-    position: fixed;
-    background-color:black;
-    width:100%;
-    height:10%;
-    top:0;
-    z-index: 10
-}
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  text-align: left;
-  position: relative;
-  top:-30%;
-  margin:50px;
-  color:white;
-  text-decoration: none;
-}
-
-.navbar a:hover{
-    text-decoration: none;
-    padding: 10px;
-    display: inline-block;
-    overflow: hidden;
-  }
 
 .right{
     position: absolute;
     height:50%;
     width:50%;
     left:50%;
-    top:11%;
+    top:5%;
 }
 
 .gmail{
@@ -58,19 +34,19 @@ iframe{
 h1{
     position: absolute;
     left:45%;
-    top:-2%;
+    top:-1%;
 }
 
 .cloud{
     position: absolute;
-    top:15%;
+    top:13%;
     font-family: 'Open Sans', sans-serif;
    
 }
 
 p{
     font-family: 'Open Sans', sans-serif; 
-    text-align: center;
+   
 }
 
 .top{
@@ -105,3 +81,23 @@ p{
     top:210%;
     font-family: 'Open Sans', sans-serif;
 }
+
+
+ul{
+      position: absolute;
+      z-index: 5;
+      top:0;
+  }
+  
+  ul li{
+      font-size: 30px;
+      display: inline;
+      padding: 14px 17px;
+      font-family: 'Leckerli One', cursive;
+      
+  }
+  
+  ul li a{
+      color:black;
+      text-decoration: none;
+  }
