--- a/ebusiness/skysales.css
+++ b/ebusiness/skysales.css
@@ -1,28 +1,3 @@
-.navbar{
-    position: fixed;
-    background-color:black;
-    width:100%;
-    height:10%;
-    
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  text-align: left;
-  position: relative;
-  top:-30%;
-  margin:50;
-  color:white;
-  text-decoration: none;
-}
-
-.navbar a:hover{
-    text-decoration: none;
-    padding: 10px;
-    display: inline-block;
-    overflow: hidden;
-    }
 
 h1{
     position: absolute;
@@ -50,3 +25,21 @@ p{
     height: 50%
 }
 
+
+ul{
+      position: absolute;
+      z-index: 5;
+      top:0;
+  }
+  
+  ul li{
+      font-size: 30px;
+      display: inline;
+      padding: 14px 17px;
+      font-family: 'Leckerli One', cursive;
+  }
+  
+  ul li a{
+      color:black;
+      text-decoration: none;
+  }
