--- a/interests/cloud.css
+++ b/interests/cloud.css
@@ -86,6 +86,28 @@ h1{
     position: absolute;
     font-size: 50px;
     left:25%;
-    top:0;
+    top:4%;
 }
 
+
+
+ul{
+    position: absolute;
+    top:0;
+    z-index: 5;
+    
+}
+
+
+ul li{
+    
+    color:black;
+    display: inline;
+    padding: 14px 17px;
+    font-size: 30px;
+    font-family: 'Leckerli One', cursive;
+}
+
+ul li a{
+    text-decoration: none;
+}
