--- a/interests/travel.css
+++ b/interests/travel.css
@@ -33,29 +33,22 @@
  
 }
 
+  
+  ul{
+      position: absolute;
+      z-index: 5;
+      top:0;
+  }
+  
+  ul li{
+      font-size: 30px;
+      display: inline;
+      padding: 14px 17px;
+      font-family: 'Leckerli One', cursive;
+  }
+  
+  ul li a{
+      color:black;
+      text-decoration: none;
+  }
 
-.navbar{
-    position: fixed;
-    background-color: black;
-    z-index: 8;
-    width:100%;
-    height:8%;
-    
-    
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.navbar a:hover{
-    text-decoration: none;
-    padding: 10px;
-    display: inline-block;
-    overflow: hidden;
-    }
