--- a/ebusiness/info.css
+++ b/ebusiness/info.css
@@ -25,7 +25,7 @@ iframe{
     height:50%;
     width:100%;
     top:60%;
-    background-image: url("http://1.bp.blogspot.com/-6As1aRUce3s/VnEL2Scp8kI/AAAAAAAABOM/9N7h69B9xxA/s1600/Google-Red-HD-Wallpaper.jpg");
+    background-image: url("https://searchengineland.com/figz/wp-content/seloads/2015/12/google-amp-fast-speed-travel-ss-1920-800x450.jpg");
     background-size:cover;
     background-position: center;
      font-family: 'Open Sans', sans-serif;
@@ -63,6 +63,9 @@ p{
     width:100%;
     top:110%;
     font-family: 'Open Sans', sans-serif;
+    background-image: url("http://static1.squarespace.com/static/519d9fe3e4b0dd1ef2ceba77/t/5a39895e9140b7ca9c577d28/1513720159521/500x200+Logo.jpg?format=1000w");
+
+    
 }
 
 .salesforce{
@@ -71,6 +74,8 @@ p{
     width:100%;
     top:160%;
     font-family: 'Open Sans', sans-serif;
+    background-image: url("http://desynit.com/wp-content/uploads/2013/11/salesforce_blog_image.jpg");
+   background-position: center;
    
 }
 
@@ -80,6 +85,9 @@ p{
     width:100%;
     top:210%;
     font-family: 'Open Sans', sans-serif;
+    background-image: url("http://www.descasio.com/wp-content/uploads/2017/09/icon-cloud-aws.png");
+    background-position: center;
+    
 }
 
 
