--- a/ebusiness/ebus.css
+++ b/ebusiness/ebus.css
@@ -1,30 +1,36 @@
 
-h1{
+
+
+#btn{
+    position: absolute;
+    top:85%;
+}
+
+
+  
+.back{
+    position: absolute;
+    top:80%;
+    left:-90%;
+}
+
+.main{
     position: absolute;
     left:45%;
-    top:25%;
+    top:10%;
 }
 
-.logo{
+#clear{
     position: absolute;
-    top:15%;
-    left:40%;
+    top:100%;
+    left:0%;
 }
 
-p{
+.home{
     position: absolute;
-   
-    text-align:center;
+    top:150%;
+    left:0%;
 }
-
-.description{
-    position: absolute;
-    width:35%;
-    left:35%;
-    top:30%;
-    height: 50%
-}
-
 
 ul{
       position: absolute;
@@ -37,11 +43,10 @@ ul{
       display: inline;
       padding: 14px 17px;
       font-family: 'Leckerli One', cursive;
+      
   }
   
   ul li a{
       color:black;
       text-decoration: none;
   }
-  
- 
