--- a/cv_1.css
+++ b/cv_1.css
@@ -6,10 +6,13 @@
 body,html{
     
     
-width:100%;
-height:100%;
+    width:100%;
+    height:100%;
     background-color:grey;
     overflow: hidden;
+    background-image: url("https://wallpaper.wiki/wp-content/uploads/2017/04/wallpaper.wiki-Business-wallpaper-HD-Free-PIC-WPC008179.jpg");
+    background-size: cover;
+    
 }
 
 
@@ -86,3 +89,19 @@ height:100%;
     ul li a:hover{
         text-decoration: none;
     }
+    
+    .about-me{
+        position: absolute;
+        left:40%;
+        top:60%;
+        width:27%;
+    }
+    
+    h2{
+        position: absolute;
+        top:55%;
+        left: 43%;
+    }
+    
+   
+  
