--- a/cv_3.css
+++ b/cv_3.css
@@ -120,3 +120,17 @@ ul li a{
 ul li a:hover{
  text-decoration: none;   
 }
+
+.mcdonalds-img{
+    position: absolute;
+    top:-75%;
+    left:-40%;
+}
+.wisetek-img{
+    position: absolute;
+    top:-120%;
+    left:70%;
+    
+    
+}
+
