--- a/ebusiness/info.css
+++ b/ebusiness/info.css
@@ -109,3 +109,8 @@ ul{
       color:black;
       text-decoration: none;
   }
+  
+  body{
+      background-image: url("https://newevolutiondesigns.com/images/freebies/white-wallpaper-14.jpg");
+      background-size:cover;
+  }
